fix(PRL-4195-update-respondent-C8): Fixed Code Smells